Basic gen working

--- a/openapi_python_client/templates/api_init.py.jinja
+++ b/openapi_python_client/templates/api_init.py.jinja
@@ -1,7 +1,5 @@
 """ Contains methods for accessing the API """
 
-{% for collection in endpoint_collections.values() %}
-{% for import_string in collection.imports_with_tag_prefix %}
-{{ import_string }}
-{% endfor %}
+{% for endpoint in endpoints %}
+{{ endpoint.import_string }}
 {% endfor %}
