--- a/openapi_python_client/templates/endpoint_module.py.jinja
+++ b/openapi_python_client/templates/endpoint_module.py.jinja
@@ -5,9 +5,9 @@ import dlt
 
 from dlt.sources.helpers import requests
 
-from ..types import UNSET, Unset
-from ..utils import extract_nested_data, extract_iterate_parent
-from ..api_helpers import fetch_json, fetch_list_items
+from .types import UNSET, Unset
+from .utils import extract_nested_data, extract_iterate_parent
+from .api_helpers import fetch_json, fetch_list_items
 
 {% for imp_string in endpoint.get_imports() %}
 {{ imp_string }}
