--- a/openapi_python_client/templates/api_helpers.py.jinja
+++ b/openapi_python_client/templates/api_helpers.py.jinja
@@ -7,7 +7,7 @@ from dlt.common import json
 from dlt.common.jsonpath import TJsonPath
 
 from .types import UNSET
-from .util import extract_nested_data
+from .utils import extract_nested_data
 
 
 class ParamInfo(TypedDict):
